# FFmpegAndroidDemo

./: README
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/leikang/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: android_log.h  cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd.c  ffmpeg_cmd.h
app/src/main/java/com/leikang/ffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/leikang/ffmpeg/: ExampleUnitTest.java
ffmpeg/: VERSION  build_withx264.sh  config.asm  config.h
ffmpeg/android/arm/include/libavutil/: ffversion.h
ffmpeg/android/arm/lib/pkgconfig/: libavfilter.pc
ffmpeg/doc/: config.texi
ffmpeg/doc/examples/pc-uninstalled/: libavcodec-uninstalled.pc  libavfilter-uninstalled.pc  libavformat-uninstalled.pc  libavutil-uninstalled.pc  libpostproc-uninstalled.pc  libswresample-uninstalled.pc  libswscale-uninstalled.pc
ffmpeg/ffbuild/: config.fate  config.mak  config.sh
ffmpeg/libavcodec/: bsf_list.c  cbs_h2645.d  cbs_vp9.d  codec_list.c  h2645_parse.d  libavcodec.pc  libavcodec.version  libx264.d  parser_list.c  vp9_metadata_bsf.d
ffmpeg/libavcodec/neon/: mpegvideo.d
ffmpeg/libavfilter/: af_adeclick.d  af_aderivative.d  af_afir.d  af_aiir.d  af_amerge.d  af_headphone.d  dnn_backend_native.d  dnn_interface.d  filter_list.c  libavfilter.version  vf_amplify.d  vf_blackframe.d  vf_boxblur.d  vf_colorchannelmixer.d  vf_colormatrix.d  vf_convolution.d  vf_cover_rect.d  vf_cropdetect.d  vf_deblock.d  vf_delogo.d  vf_edgedetect.d  vf_eq.d  vf_fftdnoiz.d  vf_fieldmatch.d  vf_find_rect.d  vf_fspp.d  vf_geq.d  vf_histeq.d  vf_hqdn3d.d  vf_kerndeint.d  vf_mcdeint.d  vf_mpdecimate.d  vf_neighbor.d  vf_nlmeans.d  vf_nnedi.d  vf_overlay.d  vf_owdenoise.d  vf_perspective.d  vf_phase.d  vf_pp.d  (+14 more)
ffmpeg/libavformat/: aiffenc.d  avidec.d  cafenc.d  dash.d  dashenc.d  demuxer_list.c  img2dec.d  isom.d  libavformat.pc  libavformat.version  matroskaenc.d  mov.d  mov_esds.d  movenc.d  smoothstreamingenc.d
ffmpeg/libavutil/: libavutil.pc  libavutil.so.56  libavutil.version
ffmpeg/libpostproc/: libpostproc.pc  libpostproc.so.55  libpostproc.version
ffmpeg/libswresample/: libswresample.pc  libswresample.so.3
ffmpeg/libswscale/: libswscale.pc  libswscale.so.5
gradle/wrapper/: gradle-wrapper.properties
x264/: build_x264.sh  configure
